<resources>
    <string name="app_name">套餐精灵</string>
    <string name="activity_user">用户</string>
    <string name="activity_login">登录/注册</string>
    <string name="activity_package_detail">套餐详情</string>
    <string name="activity_device">我的设备</string>
    <string name="activity_backup">同步设置</string>
    <string name="activity_library">开源协议</string>
    <string name="activity_about">关于</string>
    <string name="activity_collection">我的收藏</string>
    <string name="activity_flow_rank">流量排行</string>
    <string name="activity_call_rank">通话统计</string>
    <string name="activity_forget">忘记密码</string>
    <string name="activity_notification">系统通知</string>
    <string name="activity_feedback">反馈</string>
    <string name="activity_user_protocol">用户协议</string>
    <string name="activity_acknowledge">鸣谢</string>
    <string name="navigation_item_statistics">统计</string>
    <string name="navigation_item_find">发现</string>
    <string name="navigation_item_report">推荐报告</string>
    <string name="navigation_item_account">账户</string>
    <string name="menu_search_text">搜索</string>
    <string name="menu_share_text">分享</string>

    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="report_free_flow">指定App免流</string>
    <string name="report_extra_type_one">全国流量%d元/GB</string>
    <string name="report_extra_type_two">全国日租</string>
    <string name="report_extra_type_three">省内/省外日租</string>
    <string name="report_extra_type_four">省内日租/省外流量</string>
    <string name="report_extra_type_five">全国无限流量</string>
    <string name="report_extra_type_six">全国日租无限流量</string>
    <string name="report_extra_type_seven">省内日租无限流量/省外日租</string>

    <!-- 统计界面 -->
    <string name="statistic_permission_title">权限提醒</string>
    <string name="statistic_permission_denied">您拒绝了某项权限，这将导致应用功能异常</string>
    <string name="statistic_read_stats_denied">[访问使用记录] 这项权限对于套餐精灵非常重要，请您授予此项权限</string>
    <string name="statistic_read_stats_info">[访问使用记录] 这项权限对于套餐精灵非常重要，请您在接下来打开的页面中找到套餐精灵，然后开启此项权限</string>
    <string name="dialog_read_stats_title">重要权限</string>
    <string name="dialog_read_stats_sure">确定</string>
    <string name="dialog_read_stats_cancel">取消</string>
    <string name="statistic_dialog_sure">重新授权</string>
    <string name="statistic_dialog_cancel">拒绝授权</string>
    <string name="statistic_app_other">其他应用</string>

    <!-- 应用流量排行界面 -->
    <string name="tab_today">今日排行</string>
    <string name="tab_week">本周排行</string>
    <string name="tab_month">本月排行</string>

    <!-- 通话时长统计 -->
    <string name="call_rank_tips">以上数据仅统计了呼出电话的通话时长，并不包含接电话的通话时长（请以运营商的数据为准）</string>
    <string name="call_rank_title_today">今日通话时长</string>
    <string name="call_rank_title_week">本周通话时长</string>
    <string name="call_rank_title_month">本月通话时长</string>
    <string name="call_rank_no_data">暂无数据</string>

    <!-- 推荐套餐结果界面 -->
    <string name="report_recommend_tips">以下是根据您以往的流量/通话使用情况，选出的最合适的推荐套餐列表</string>
    <string name="report_recommend_history">以下是您在上次（%s）获得的推荐套餐列表</string>
    <string name="report_recommend_history_no_date">以下是您在上次获得的推荐套餐列表</string>
    <string name="report_no_data_tips">您还没有获得过推荐套餐</string>
    <string name="report_title">推荐套餐</string>
    <string name="report_btn_recommend">获取推荐</string>
    <string name="report_btn_new_recommend">重新推荐</string>

    <!-- 套餐详情 -->
    <string name="package_detail_no_privilege">暂无特权</string>
    <string name="package_detail_call_infinite">不限量</string>
    <string name="package_detail_flow_infinite">全国无限流量</string>
    <string name="package_detail_title_call_in">套餐内通话</string>
    <string name="package_detail_title_call_out">套餐外通话</string>
    <string name="package_detail_title_flow_in">套餐内流量</string>
    <string name="package_detail_title_flow_out">套餐外流量</string>
    <string name="package_detail_title_privilege">特权</string>
    <string name="package_detail_title_more_info">更多信息</string>
    <string name="package_detail_title_more_description">套餐的综合评分通过计算所有用户的评分平均值获得，仅供参考。（综合评分会在评分后延迟一小段时间才更新）</string>
    <string name="package_detail_title_total_score">综合评分（%d人）</string>
    <string name="package_detail_title_total_score_so_many">综合评分（999+）</string>
    <string name="package_detail_total_score_no_count">评分人数未知</string>
    <string name="package_detail_title_my_score">我的评分</string>
    <string name="package_detail_month_consume">每月预计消费</string>
    <string name="package_detail_remark">备注</string>
    <string name="package_detail_not_login">尚未登录</string>
    <string name="package_detail_need_login">请先登录！</string>
    <string name="package_btn_link">官方链接</string>
    <string name="package_btn_score">我要评分</string>
    <string name="package_detail_no_star">暂无评分</string>
    <string name="package_detail_no_my_score">尚未评分</string>
    <string name="package_detail_score_error">评分失败</string>
    <string name="package_detail_score_succeed">评分成功</string>
    <string name="package_detail_dialog_title_score">评分</string>
    <string name="package_detail_dialog_score_not_zero">评分不能为0</string>

    <!-- 账户界面 -->
    <string name="account_item_login">登录/注册</string>
    <string name="account_title_user">账号与设备</string>
    <string name="account_title_app">应用</string>
    <string name="account_title_message">消息</string>
    <string name="account_item_backup">同步设置</string>
    <string name="account_item_device">我的设备</string>
    <string name="account_item_update">检查更新</string>
    <string name="account_item_library">开源协议</string>
    <string name="account_item_about">关于</string>
    <string name="account_item_logout">退出登录</string>
    <string name="account_item_notification">系统通知</string>
    <string name="account_item_feedback">反馈</string>
    <string name="update_checking_tips">正在查询....</string>
    <string name="library_load_error">数据加载失败，请稍后重试</string>

    <!-- 用户信息界面 -->
    <string name="user_name_tips">暂未获取到用户名</string>
    <string name="user_email_tips">暂未获取到邮箱</string>
    <string name="user_phone_tips">点击设置手机号</string>
    <string name="user_change_password">修改密码</string>
    <string name="logout_tips">确定要退出登录吗？</string>
    <string name="logout_sure">确定</string>
    <string name="logout_cancel">取消</string>
    <string name="logout_succeed">已经退出登录</string>
    <string name="modify_username">修改名字</string>
    <string name="modify_phone">修改手机号码</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_succeed_tips">修改成功</string>
    <string name="modify_pwd_succeed_tips">密码修改成功，请重新登录</string>
    <string name="modify_error_tips">修改失败，请稍后重试</string>
    <string name="modify_content_none">内容不可以为空！</string>
    <string name="modify_pwds_not_equals">两次密码输入不一致！</string>
    <string name="modify_old_pwd_tips">当前密码</string>
    <string name="modify_new_pwd_tips">新的密码</string>
    <string name="modify_again_new_pwd_tips">确认密码</string>
    <string name="feedback_need_login">请您先登录</string>
    <string name="feedback_submit_error">反馈信息提交失败，请稍后重试</string>
    <string name="feedback_submit_succeed">反馈信息已成功提交，感谢您的支持~</string>
    <string name="feedback_error_tips">您的反馈信息已保存到本地，退出本页面并不会导致反馈信息被清除（重新进入本页面会自动加载）</string>
    <string name="feedback_btn_text">提交</string>
    <string name="feedback_edit_tips">请输入反馈内容</string>
    <string name="feedback_dialog_title">确认提交</string>
    <string name="feedback_dialog_content">是否提交反馈内容？</string>

    <!-- 登录/注册 -->
    <string name="login_email_hint">邮箱</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_register">注册</string>
    <string name="register_email_exist">邮箱已被注册</string>
    <string name="register_error">注册失败</string>
    <string name="register_succeed">注册成功</string>
    <string name="login_error">账号或密码错误</string>
    <string name="login_succeed">登录成功</string>
    <string name="login_forget">忘记密码？</string>
    <string name="menu_login_text">登录</string>
    <string name="menu_register_text">注册</string>
    <string name="register_protocol_tips">点击注册，即表明您同意我们的《用户协议》</string>
    <string name="forget_get_code">获取验证码</string>
    <string name="forget_email_tips">验证码邮件已成功发送，如果您在收件箱中没有找到相关邮件，请检查垃圾箱（某些时候邮件发送时间可能会有所延迟）</string>
    <string name="forget_email_none">邮箱不可为空</string>
    <string name="forget_email_invalid">邮箱格式有误</string>
    <string name="forget_email_send_succeed">验证码已发送，请注意查收</string>
    <string name="forget_email_send_error">验证码发送失败，请稍后重试（或检查邮箱是否有误）</string>
    <string name="forget_pwds_not_equals">两次输入的密码不一致</string>
    <string name="forget_reset_pwd_succeed">重置密码成功</string>
    <string name="forget_reset_pwd_error">重置密码失败</string>

    <!-- 关于界面 -->
    <string name="about_title_author">开发者</string>
    <string name="about_author">CodingEnding</string>
    <string name="about_title_blog">博客</string>
    <string name="about_blog">https://blog.csdn.net/codingending</string>
    <string name="about_title_github">Github</string>
    <string name="about_github">https://github.com/CodingEnding</string>
    <string name="about_title_protocol">用户协议</string>
    <string name="about_title_acknowledge">鸣谢</string>
    <string name="about_copyright">Copyright © 2018 CodingEnding\nAll Rights Reserved</string>
    <string name="about_share_title">分享</string>
    <string name="about_share_content">[套餐精灵]一款很棒的互联网套餐推荐App，邀请你一起使用（可前往应用商店下载）</string>
    <string name="about_copy_succeed">内容已复制到剪切板</string>
    <string name="protocol_load_error">数据加载失败，请稍后重试</string>
    <string name="acknowledge_load_error">数据加载失败，请稍后重试</string>

    <!-- 格式化字符串 -->
    <string name="flow_text">%sM</string>
    <string name="rank_flow_mb_text">%sMB</string>
    <string name="rank_flow_kb_text">%dKB</string>
    <string name="call_text">%s分钟</string>
    <string name="report_consume_text">预计%d元/月</string>
    <string name="find_package_star">%.1f分</string>
    <string name="find_package_no_star">暂无评分</string>
    <string name="find_package_month_rent">月租%d元</string>
    <string name="call_rank_text">%d分钟</string>
    <string name="about_version">v%s</string>
    <string name="forget_code_tips">%dS后可重新获取</string>

    <string name="package_detail_month_consume_content">%.1f元</string>
    <string name="package_detail_star">%.1f分</string>
    <string name="package_detail_month_rent">月租%d元</string>
    <string name="package_detail_call_time">%d分钟</string>
    <string name="package_detail_extra_call">%.1f元/分钟</string>
    <string name="package_detail_flow_one">全国%dM</string>
    <string name="package_detail_flow_two">省内%dM 全国%dM</string>
    <string name="package_detail_flow_three">省内%dM</string>
    <string name="package_detail_type_one">全国流量%d元/GB</string>
    <string name="package_detail_type_two">全国日租%d元%dM</string>
    <string name="package_detail_type_three">省内日租%d元%dM\n省外日租%d元%dM</string>
    <string name="package_detail_type_four">省内日租%d元%dM\n省外流量%d元/GB</string>
    <string name="package_detail_type_five">全国无限流量</string>
    <string name="package_detail_type_six">全国日租%d元无限流量</string>
    <string name="package_detail_type_seven">省内日租%d元无限流量\n省外日租%d元%dM</string>

</resources>
