<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/user_dialog_padding_left"
    android:paddingRight="@dimen/user_dialog_padding_right"
    android:paddingTop="@dimen/user_dialog_padding_top"
    android:paddingBottom="@dimen/user_dialog_padding_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_text_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modify_old_pwd_tips"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_text_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_dialog_pwd_margin_top"
        android:hint="@string/modify_new_pwd_tips"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_text_new_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_dialog_pwd_margin_top"
        android:hint="@string/modify_again_new_pwd_tips"
        android:inputType="textPassword"/>

</LinearLayout>