<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codingending.packagefairy.activity.account.AboutActivity">

    <!-- Toolbar -->
    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/about_top_padding_left"
                android:paddingRight="@dimen/about_top_padding_right"
                android:paddingTop="@dimen/about_top_padding_top"
                android:paddingBottom="@dimen/about_top_padding_bottom"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/about_icon_width"
                    android:layout_height="@dimen/about_icon_height"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/about_appname_text_size"
                    android:textColor="@color/about_title_text"
                    android:text="@string/app_name"/>
                <TextView
                    android:id="@+id/text_view_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/about_version_text_size"
                    tools:text="v1.4"/>
            </LinearLayout>

            <!-- 下方信息区 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/about_layout_margin_top"
                android:background="@color/about_layout_background"
                android:divider="@drawable/drawable_line_gray"
                android:showDividers="beginning|middle|end">
                <LinearLayout
                    android:id="@+id/layout_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AboutInfoLayoutStyle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutTitleTextViewStyle"
                        android:text="@string/about_title_author"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AboutContentTextViewStyle"
                        android:text="@string/about_author"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AboutInfoLayoutStyle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutTitleTextViewStyle"
                        android:text="@string/about_title_blog"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AboutContentTextViewStyle"
                        android:text="@string/about_blog"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AboutInfoLayoutStyle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutTitleTextViewStyle"
                        android:text="@string/about_title_github"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AboutContentTextViewStyle"
                        android:text="@string/about_github"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_user_protocol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AboutInfoLayoutStyle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutTitleTextViewStyle"
                        android:text="@string/about_title_protocol"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_acknowledge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AboutInfoLayoutStyle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutTitleTextViewStyle"
                        android:text="@string/about_title_acknowledge"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_copyright_margin_top"
                android:layout_marginBottom="@dimen/about_copyright_margin_bottom"
                android:gravity="center_horizontal"
                android:textSize="@dimen/about_copyright_text_size"
                android:text="@string/about_copyright"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
